fix: use body height 100% to avoid issues on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -104,7 +104,7 @@ p {
 
 html,
 body {
-    height: 100vh;
+    height: 100%;
 }
 
 html {
@@ -118,7 +118,6 @@ body {
     grid-template-rows: auto 1fr auto;
     background-color: var(--color-background);
     color: var(--color-body);
-    height: 100vh;
 }
 
 p {
